:lipstick: fix: fixed styles alignment

--- a/github_finder/src/App.module.css
+++ b/github_finder/src/App.module.css
@@ -1,6 +1,8 @@
 .app {
   max-width: 500px;
   margin: 0 auto;
+  text-align: center;
+
 }
 
 .app h1 {
