--- a/github_finder/src/components/Search.module.css
+++ b/github_finder/src/components/Search.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 1rem;
   margin-bottom: 1.5rem;
 }
